# SimpleChat

./: Cargo.toml  Readme.md  build.rs
src/: basic_core.rs  main.rs
src/basic_core/: configuration_manager.rs  core_executor.rs  logger.rs  network.rs  ui_manager.rs
src/basic_core/configuration_manager/: config_storage.rs
src/basic_core/ui_manager/: center_main_window.rs  center_new.rs  linkers.rs  pages.rs  start_animation.rs  validators.rs
ui/: MainMenu.slint
ui_slint/: MainMenu.slint
ui_slint/widgets/: validated_input.slint
