[package]
name = "SimpleChat"
version = "0.1.1"
edition = "2024"
authors = ["ArT"]

[dependencies]
slint = "1.16.1"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
display-info = "0.5.9"
serde_json = "1.0.149"

[build-dependencies]
slint-build = "1.16.1"

[profile.dev]
opt-level = 1
